# check_disk

./: .gitignore  CHANGELOG.md  README.md  build.sh  convert_config.py  disk_checker.py  disk_checker_config.json  disk_usage_report.json  permission_issues.json  pyproject.toml  requirements-dev.txt  requirements.txt  test
detail_users/: detail_report_dir_root.json  detail_report_dir_www.json  detail_report_file_root.json  detail_report_file_www.json
docs/: PLAN-reports-directory.md  PLAN-rust-core-engine.md
scripts/: backfill_team_ids.py  benchmark_pipeline.py  build_path_dict_seek.py  convert_config.py  export_user_reports.py  migrate_permission_issues.py
src/: __init__.py  cli_interface.py  config_manager.py  constants.py  disk_scanner.py  formatter.py  legacy_scanner_backup.py  msteams_notifier.py  native_query.py  report_generator.py  scan_preflight.py  scan_status.py  sync_manager.py  tree_map_generator.py  utils.py
src/formatters/: __init__.py  base_formatter.py  config_display.py  report_comparison.py  report_formatter.py  table_formatter.py
src/native_index/: Makefile  README.md  apply_or.patch  build.sh  cdx1_query  index.c  index.h  query_cli.c
src/native_index/release/: query_cli.glibc217  query_cli.glibc217.glibc.txt  query_cli.native  query_cli.native.glibc.txt  query_cli.rhel6_8  query_cli.rhel6_8.glibc.txt  query_cli.rhel7_8  query_cli.rhel7_8.glibc.txt
src/rust_exporter/: Cargo.toml  build.sh  pyproject.toml
src/rust_exporter/src/: lib.rs
src/rust_scanner/: Cargo.toml  build.sh  pyproject.toml
src/rust_scanner/src/: db_writer.rs  lib.rs  phase_index.rs  pipe_binary.rs  pipe_events.rs  pipe_io.rs  pipe_permission.rs  pipe_treemap.rs  pipe_types.rs  pipe_user_finalize.rs  pipe_user_jobs.rs  pipeline_manifest.rs  report_pipeline.rs  scan_constants.rs  scan_core.rs  scan_state.rs  scan_utils.rs  unified_db.rs  unified_output.rs  v2_engine.rs
tests/: test_disk_scanner.py  test_native_query.py  test_native_query_cli.py  test_report_generator.py  test_sync_manager.py  test_unified_pipeline.py
