[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "check-disk"
version = "1.0.0"
description = "High-performance disk usage monitoring CLI for Linux servers, powered by a native Rust core with a pure-Python fallback."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Huy Nguyen" }]
requires-python = ">=3.6"

# No third-party runtime dependencies — all stdlib.
# Rust .so binaries are precompiled and shipped in src/.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[project.scripts]
check-disk = "disk_checker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
