[package]
name = "export_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "export_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
flate2 = "1.0"
