[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "export_rust"
requires-python = ">=3.8"
version = "0.1.0"
description = "High-performance Rust JSON-to-TXT exporter for disk analyzer"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# build with pyo3's abi3 feature to generate cross-version wheels
features = ["pyo3/abi3-py38"]
module-name = "export_rust"
