[package]
name = "fast_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_scanner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
jwalk = "0.8"
rayon = "1.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
