[package]
name = "fast_scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_scanner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
ignore = "0.4.22"
tempfile = "3.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5"
flate2 = "1.0"
rayon = "1.8"
glob = "0.3"
crc32fast = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
bincode = "1.3"
zstd = "0.13"

unicode-normalization = "0.1"
